--- a/homePage.html
+++ b/homePage.html
@@ -52,13 +52,16 @@
   <div id="content" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active image">
-        <img src="public/images/1.jpg" class=" w-100 item-images" alt="...">
+        <img src="public\images\1.jpg" class=" w-100 item-images" alt="...">
       </div>
       <div class="carousel-item image">
-        <img src="public/images/2.jpg" class=" w-100 item-images" alt="...">
+        <img src="public\images\2.jpg" class=" w-100 item-images" alt="...">
       </div>
       <div class="carousel-item image">
-        <img src="public/images/3.jpg" class=" w-100 item-images" alt="...">
+        <img src="public\images\3.jpg" class=" w-100 item-images" alt="...">
+      </div>
+      <div class="carousel-item image">
+        <img src="public\images\4.jpg" class=" w-100 item-images" alt="...">
       </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#content" data-bs-slide="prev">
